# wecare-parceiros

./: .env.example  .gitignore  Carlos _ Felipe - 2026_06_24 17_01 GMT-03_00 - Recording.txt  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08d48a791538_lead_cpf_email_nullable.py  2d6f9b7b4a21_add_partner_portal_modules.py  2f49ebb7dd38_initial_schema.py  9c1aca572ad1_add_crm_clients.py  b03879638c90_initial_schema.py
backend/app/: auth.py  database.py  in_app_notifications.py  notifications.py  tasks.py  utils.py
backend/app/models/: __init__.py  parceria.py
backend/app/routers/: admin.py  auth.py  commissions.py  crm.py  leads.py  materials.py  notifications.py  partners.py  properties.py  revenue.py
backend/app/schemas/: __init__.py  parceria.py
backend/scripts/: create_admin.py
deploy/: README.md  certbot.md  nginx.conf  wecare-parceiros-backend.service  wecare-parceiros-frontend.service
deploy/nginx/: parceiros.wecarehosting.com.br.conf
deploy/systemd/: wecare-parceiros-backend.service  wecare-parceiros-frontend.service
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(portal)/: layout.tsx
frontend/app/indicar/: page.tsx
frontend/components/: public-header.tsx  revenue-modal.tsx  sidebar-nav.tsx  status-badge.tsx
frontend/lib/: admin-routes.ts  api.ts  cpf.ts  csv.ts  utils.ts
frontend/public/: exemplo-leads.csv  exemplo-leads.xlsx
frontend/scripts/: generate_exemplo_leads_xlsx.py
(+26 files in other folders)
