[project]
name = "wecare-parceiros"
version = "1.0.0"
description = "Sistema de gestão de parceiros e indicações — WeCare Hosting"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "uvicorn>=0.44.0",
    "sqlalchemy>=2.0",
    "pydantic[email]>=2.0",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "resend>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
prod = [
    "psycopg2>=2.9",
]
test = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27",
]
